--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Setup the earthly in a GitHub Actions build environment",
   "main": "dist/index.js",
   "scripts": {
-    "package": "ncc build src/main.ts -o dist --source-map --license LICENSE",
+    "package": "ncc build -o dist/setup src/setup-earthly.ts --source-map --license LICENSE && ncc build -o dist/cache-save src/cache-save.ts --source-map --license LICENSE",
     "test": "jest --coverage src/**/*",
     "lint": "eslint src/**/*.ts"
   },
